edition = "2023";

package metrics;

// При необходимости поправьте go_package в соответствии со структурой
// вашего проекта.
option go_package = "github.com/fragpit/yandex-go-dev-metrics/internal/proto";

// Metric определяет единичную метрику.
message Metric {
    string id = 1; // имя метрики

    // MType задаёт тип метрики.
    enum MType {
        MTYPE_UNSPECIFIED = 0;
        MTYPE_GAUGE = 1;
        MTYPE_COUNTER = 2;
    }

    MType type = 2; // тип метрики
    // Поле delta для метрик-счётчиков.
    int64 delta = 3;
    // Поле value для метрик-измерителей.
    double value = 4;
}

// UpdateMetricsRequest содержит список метрик для обновления.
message UpdateMetricsRequest {
    repeated Metric metrics = 1;
}

// UpdateMetricsResponse — пустой ответ для подтверждения успешного обновления.
message UpdateMetricsResponse {}

// MetricsService определяет сервис для работы с метриками.
service Metrics {
    // UpdateMetrics обновляет метрики на сервере.
    // Этот метод подходит для отправки как единичных метрик, так и батчей.
    rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}
